--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ margin-right: 46px;
   
   position: absolute;
   top: 0;
-  left: 0;
+  left: 10px;
   z-index: 1;
   
   width: 18px;
@@ -226,7 +226,7 @@ margin-right: 46px;
 #product-3:checked ~ .slider-controls .slider-controls-item--3::before {
   content: "";
   position: absolute;
-  left: 50%;
+  left: 100%;
   top: 50%;
   z-index: 2;
   width: 4px;
@@ -510,6 +510,7 @@ margin-right: 46px;
 
 .partners-link:not(:nth-child(4n)) {
   margin-right: 30px;
+  width: 280px;
 }
 
 .partners-link {
@@ -669,8 +670,8 @@ margin-right: 46px;
   top: 31px;
   left: 0;
   
-  width: 4px;
-  height: 4px;
+  width: 20px;
+  height: 20px;
   padding: 0;
 
   border: 8px solid #ffffff;
@@ -739,12 +740,6 @@ margin-right: 46px;
 
   background-image: url("../img/checkbox-on.svg");
 }
-/*я запуталась в классах, как правильно записать состояния при наведении и не активное*/
-.filter-input:focus + label,
-.filter-input-chekbox:hover:before {
-  opacity: 1;
-}
-
 
 .filter-input-radio + label::before {
   content: "";
@@ -756,37 +751,45 @@ margin-right: 46px;
   width: 25px;
   height: 25px;
   
-  border: 4px solid #a6a6a6;
-  border-radius: 50%;
+  background-image: url("../img/radio-off.svg");
+  background-repeat: no-repeat;
+  opacity: 0.4;
 }
 
 .filter-input-radio:checked + label::after {
   content: "";
 
   position: absolute;
-  top: 5px;
-  left: -29px;
+  top: -3px;
+  left: -37px;
 
-  width: 9px;
-  height: 9px;
+  width: 25px;
+  height: 25px;
 
-  background-color: #a6a6a6;
-  border-radius: 50%;
+  background-image: url("../img/radio-on.svg");
 }
 
-.filter-input:focus + label::before,
-.filter-label:hover::before {
+.filter-item label:hover,
+.filter-item label:focus {
   opacity: 1;
 }
 
-
-.filter-input:disabled + label::before {
-  opacity: 0.1;
-}
-
-.filter-input:disabled + .filter-label {
+.filter-item label:disabled {
   opacity: 0.3;
 }
+
+.filter-item label:hover:before,
+.filter-item label:focus:before,
+.filter-item label:hover:after,
+.filter-item label:focus:after {
+  opacity: 1;
+}
+
+.filter-item label:disabled:before,
+.filter-item label:disabled:after {
+  opacity: 0.3;
+}
+
 
 .filter-button {
   padding-left: 88px;
@@ -897,6 +900,15 @@ margin-right: 46px;
   opacity: 0.3;
 }
 
+.sorting-btn:hover,
+.sorting-btn:focus {
+  opacity: 0.5;
+}
+
+.sorting-btn:active {
+  opacity: 1
+}
+
 .sorting-btn-up {
   background-image: url(../img/icon-up-dir.svg);
   background-repeat: no-repeat;
@@ -982,7 +994,7 @@ margin-right: 46px;
 
   position: absolute;
   left: 0;
-  bottom: 6px;
+  bottom: 0;
   width: 100%;
   margin: 0;
   padding-top: 28px;
@@ -1079,20 +1091,41 @@ margin-right: 46px;
   background-color: #f1efe8;
 }
 
-.map img {
-   display: block;
-   margin: 0 auto;
+.map-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+
+  margin: 0 auto;
+}
+
+.map-img img {
+  height: 416px;
+}
+
+.map iframe {
+  position: relative;
+  z-index: 2;
+
+  border: none;
+}
+
+.map .container {
+  position: relative;
 }
 
 .footer-contacts {
   position: absolute;
-  top: 54px;
-  left: 140px;
+  top: 51px;
+  left: 21px;
   padding-top: 51px;
   padding-bottom: 47px;
   padding-right: 50px;
   padding-left: 50px;
   width: 319px;
+  z-index: 3;
 
   background-color: #ffffff;
 }
@@ -1194,6 +1227,46 @@ background-color: #d7373b;
   display: flex;
 }
 
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
 .feedback {
   display: none;
   position: fixed;
@@ -1202,8 +1275,20 @@ background-color: #d7373b;
   transform: translate(-50%, -50%);
   width: 960px;
   padding: 73px 100px 84px; 
+  z-index: 4;
+
   background-color: #ffffff;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.75);
+}
+
+.feedback-show {
+  display: block;
+
+  animation: bounce 1s;
+}
+
+.feedback-error {
+  animation: shake 0.6s;
 }
 
 .feedback h2 {
